# tfnsw_trip_planner

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  build_and_publish.sh  build_demo.sh  demo.ipynb  demo.md  pyproject.toml  test.py
.github/workflows/: publish.yml  tests.yml
tests/: conftest.py  test_coordinate.py  test_vehicle_positions_live.py
tfnsw_trip_planner/: __init__.py  client.py  exceptions.py  models.py
tfnsw_trip_planner/models/: __init__.py  coordinate.py  enums.py  hint.py  journey.py  leg.py  location.py  product.py  service_alert.py  stop.py  stop_event.py  stop_parent.py  transport.py  travel_in_cars.py  vehicle_position.py
