[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfnsw-trip-planner"
version = "1.2.0"
description = "A clean, idiomatic Python library for the Transport for NSW Trip Planning APIs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Maksym Kozlenko", email = "max@kozlenko.info"}
]
maintainers = [
    {name = "Maksym Kozlenko", email = "max@kozlenko.info"}
]
keywords = [
    "tfnsw",
    "transport-nsw",
    "trip-planner",
    "api-client",
    "transport",
    "australia",
    "nsw",
    "opendata"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/maxim75/tfnsw_trip_planner"
Documentation = "https://github.com/maxim75/tfnsw_trip_planner#readme"
Repository = "https://github.com/maxim75/tfnsw_trip_planner"
Issues = "https://github.com/maxim75/tfnsw_trip_planner/issues"
API = "https://opendata.transport.nsw.gov.au/"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["tfnsw_trip_planner*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]